<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_food"
        android:icon="@drawable/ic_food"
        android:title="@string/title_food" />
    <item
        android:id="@+id/navigation_input"
        android:icon="@drawable/baseline_add_24"
        android:title="Input"/>
    <item
        android:id="@+id/navigation_glucosa"
        android:icon="@drawable/ic_glucose"
        android:title="@string/title_glucosa" />

    <item
        android:id="@+id/navigation_alarm"
        android:icon="@drawable/ic_alarm"
        android:title="@string/title_alarm" />

</menu>