<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dicoding2.glucofy.ui.fragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.dicoding2.glucofy.ui.fragment.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/navigation_glucosa"
        android:name="com.dicoding2.glucofy.ui.fragment.GlucosaLogFragment"
        android:label="@string/title_glucosa"
        tools:layout="@layout/fragment_glucosa_log" />

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.dicoding2.glucofy.ui.fragment.AlarmFragment"
        android:label="@string/title_alarm"
        tools:layout="@layout/fragment_alarm">

        <action
            android:id="@+id/action_alarmsListFragment_to_createAlarmFragment"
            app:destination="@id/createAlarmFragment" />
    </fragment>
    <fragment
        android:id="@+id/createAlarmFragment"
        android:name="com.dicoding2.glucofy.ui.fragment.CreateAlarmFragment"
        android:label="fragment_create_alarm"
        tools:layout="@layout/fragment_create_alarm">
        <action
            android:id="@+id/action_createAlarmFragment_to_alarmsListFragment"
            app:destination="@id/navigation_alarm"/>
    </fragment>

</navigation>